--- a/index.html
+++ b/index.html
@@ -230,14 +230,13 @@ Items: VOD and Linear. Other countries<br>
     b - "Confirm"/"Redirect" links - https://www.ziggogo.tv/dl/nl/...<br></p> 
 
      a - [Ziggo] Web deeplinks  https://www.ziggogo.tv/nl/...<br>
-   <a href="https://www.ziggogo.tv/nl/my-prime.html">https://www.ziggogo.tv/nl/ my-prime Page</a><br>
-   <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
+   <a href="https://www.ziggogo.tv/nl.html">https://www.ziggogo.tv/nl/ home Page</a><br>
+   <a href="https://www.ziggogo.tv/nl/tv/tv-gids-replay.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
+      <a href="https://www.ziggogo.tv/nl/tv/tv-kijken.html">https://www.ziggogo.tv/nl/ watch tv Page</a><br>
+  <a href="https://www.ziggogo.tv/nl/movies-series-xl/ontdek.html">https://www.ziggogo.tv/nl/movies-series-xl Page</a><br>
   <a href="https://www.ziggogo.tv/nl/my-videos.html">https://www.ziggogo.tv/nl/ my-videos Page</a><br>
-  <a href="https://www.ziggogo.tv/nl.html">https://www.ziggogo.tv/nl/ home Page</a><br>
-  <a href="https://www.ziggogo.tv/nl/tv-kijken.html">https://www.ziggogo.tv/nl/ watch tv Page</a><br>
-  <a href="https://www.ziggogo.tv/nl/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282/broken-flowers.html">https://www.ziggogo.tv/nl/ My prime item</a><br>
-  <a href="https://www.ziggogo.tv/nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi.html">https://www.ziggogo.tv/nl/ On demand item</a><br>
-  <a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a><br></p>
+
+ 
   
 b - [Ziggo] "Confirm"/"Redirect" links - https://www.ziggogo.tv/dl/nl/...<br>
 <a href="https://www.ziggogo.tv/dl/nl/watchtv/station/24443942987/program/crid:~~2F~~2Fbds.tv~~2F198470434/listing/crid:~~2F~~2Fbds.tv~~2F229084392-imi:0010000000808F95">www.ziggogo.tv/dl/nl/ TV guide item</a><br>
