--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@ Indirectly Mobile deeplinks can be tested by p.1-a
       <b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. Different countries.</b><br>
      
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries<br>
+
+<a href="https://www.horizon.tv/pl_pl.html">https://www.horizon.tv/en_ch/ Home PL -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/pl_pl/tv/ogladaj-tv.html">https://www.horizon.tv/en_ch/ ogladaj-tv PL -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/pl_pl/tv/program-tv.html">https://www.horizon.tv/en_ch/ program-tv PL -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/pl_pl/filmy-i-seriale/odkryj.html">https://www.horizon.tv/en_ch/ filmy-i-seriale PL -> should be opened in HZN</a><br>
+<a href="https://www.horizon.tv/pl_pl/wideo/lista-odtwarzania.html">https://www.horizon.tv/en_ch/ My videos PL -> should be opened in HZN</a><br>
+
+
 <a href="https://www.horizon.tv/en_ch.html">https://www.horizon.tv/en_ch/ Home CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/watch-tv.html">https://www.horizon.tv/en_ch/ watch-tv CH -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/en_ch/tv-guide.html">https://www.horizon.tv/en_ch/ tv-guide CH -> should be opened in HZN</a><br>
