--- a/index.html
+++ b/index.html
@@ -275,12 +275,11 @@ Wrong pages<br>
     b - "Confirm"/"Redirect" links - https://www.virginmediatv.ie/dl/ie/...<br></p> 
 
     a - [Virgin] Web deeplinks  https://www.virginmediatv.ie/en...<br>
-  <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/ M-S landing page</a><br>
-  <a href="https://www.virginmediatv.ie/en">https://www.virginmediatv.ie/Home landing page</a><br>
- <a href="https://www.virginmediatv.ie/en/live-channels">https://www.virginmediatv.ie/ Watch TV landing page</a><br>
-  <a href="https://www.virginmediatv.ie/en/tv-guide">https://www.virginmediatv.ie/ TV guide landing page</a><br>
-   <a href="https://www.virginmediatv.ie/en/ondemand">https://www.virginmediatv.ie/ Movies&Boxes landing page (OnDemand = M&Box sets/Providers</a><br>
-  <a href="https://www.virginmediatv.ie/en/my-videos">https://www.virginmediatv.ie/ My videos landing page</a><br>
+   <a href="https://www.virginmediatv.ie/en.html">https://www.virginmediatv.ie/Home landing page</a><br>
+ <a href="https://www.virginmediatv.ie/en/tv/now-on-tv.html">https://www.virginmediatv.ie/ Watch TV landing page</a><br>
+  <a href="https://www.virginmediatv.ie/en/tv/tv-guide.html">https://www.virginmediatv.ie/ TV guide landing page</a><br>
+   <a href="https://www.virginmediatv.ie/en/virgin-movies-box-sets/discover.html">https://www.virginmediatv.ie/ Movies&Boxes landing page (OnDemand = M&Box sets/Providers</a><br>
+  <a href="https://www.virginmediatv.ie/en/saved/watchlist.html">https://www.virginmediatv.ie/ My videos landing page</a><br>
 
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F73196d75-8618-46d5-ab32-e866290d314e/ep-01-banana-in-the-stone/crid%3A~~2F~~2Fupc.com~~2F186071~~2FPACK0000000000808300/ep-01-banana-in-the-stone">virgintv M-S item #1</a><br>
