--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@ hgo://nl/tvguide<br>
 Indirectly Mobile deeplinks can be tested by p.1-a
   <ins>Need to be tested to check:</ins><br>
 - mobile deeplinks are implemented</p></h5>
+  
+    
+  
+
+<p>Insert an image from a web site:</p>
+<img src=" https://drive.google.com/drive/folders/1n6zT2oRsU4kOGwVoiYixf88oZk_L09_K?usp=sharing" alt="Lamp" width="32" height="32">
+
+  
+  
+  
      
 <p class="view"><a href="https://github.com/TatsianaVasko">View My GitHub Profile</a></p>
 
