--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
   
 
 <p>Insert an image from a web site:</p>
-<img src=" https://drive.google.com/drive/folders/1n6zT2oRsU4kOGwVoiYixf88oZk_L09_K?usp=sharing" alt="Lamp" width="32" height="32">
+<img src="Tatsianavasko.github.io/Untitled Diagram.jpg" alt="Shema" width="32" height="32">
 
   
   
