--- a/index.html
+++ b/index.html
@@ -64,7 +64,21 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="upctv://ch/bestofweb/channel/6413519663908599607"> upctv:// Shared=/dl link - Channel</a><br>   
 <a href="upctv://ch/bestofweb/channel/6250071565897118662/video/6430921874901912302"> upctv:// Shared=/dl link - Video asset</a><br>
         
-        <h5><p><b> <mark>HZN</mark></b><br>
+        <h3><p><b> <mark>HZN</mark></b><br>
+          
+          <b> <mark> Actionable URLs:
+            <url_for_listing/mediagroup/mediaitem>#action=<action>[&offset=<offset>] </mark></b><br>
+   
+<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCFPF2009000000460034/colonia-hd-fr.html#action=watch-trailer">My prime NL -> #action=watch-trailer</a><br>   
+<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCFPF2009000000460034/colonia-hd-fr.html#action=watch-trailer&offset=9">My prime NL -> #action=watch-trailer+offset</a><br>
+<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCFPF2009000000460034/colonia-hd-fr.html#action=add-to-watchlist">#action=add-to-watchlist</a><br>
+<a href="https://www.upctv.ch/en/tv/channel-asset.html/256616999386/location/21656615411.html#action=watch">LIVE #action=watch</a><br>
+<a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AAE2/plus-belle-la-vie/crid%3A~~2F~~2Fbds.tv~~2F302904846-imi%3A00100000016DF967/plus-belle-la-vie.html#action=watch&offset=406">VOD #action=watch&offset=406</a><br> 
+<a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AAE2/plus-belle-la-vie/crid%3A~~2F~~2Fbds.tv~~2F302904846-imi%3A00100000016DF967/plus-belle-la-vie.html#action=watch">VOD #action=watch</a><br>               
+<a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AB06/le-magazine-de-la-sante/crid%3A~~2F~~2Fbds.tv~~2F774199178-imi%3A00100000016F3113/le-magazine-de-la-sante.html#action=watch&offset=1733">TV Replay #action=watch&offset=1733</a><br>              
+
+
+
          <b> <mark>1. Universal links: </mark></b><br>
         a - Web deeplinks https://www.horizon.tv/nl_nl.html;><br>
     b - "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br></p> 
