--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ Indirectly Mobile deeplinks can be tested by p.1-a
           <b> <mark> Actionable URLs:
             <url_for_listing/mediagroup/mediaitem>#action=<action>[&offset=<offset>] </mark></b><br>
    
-<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCFPF2009000000460034/colonia-hd-fr.html#action=watch-trailer">My prime NL -> #action=watch-trailer</a><br>   
-<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCFPF2009000000460034/colonia-hd-fr.html#action=watch-trailer&offset=9">My prime NL -> #action=watch-trailer+offset</a><br>
+<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000477986/swiss-army-man-hd.html#action=watch-trailer">#action=watch-trailer</a><br>   
+<a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000477986/swiss-army-man-hd.html#action=watch-trailer&offset=45">#action=watch-trailer+offset</a><br>
 <a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCFPF2009000000460034/colonia-hd-fr.html#action=add-to-watchlist">#action=add-to-watchlist</a><br>
 <a href="https://www.upctv.ch/en/tv/channel-asset.html/256616999386/location/21656615411.html#action=watch">LIVE #action=watch</a><br>
 <a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AAE2/plus-belle-la-vie/crid%3A~~2F~~2Fbds.tv~~2F302904846-imi%3A00100000016DF967/plus-belle-la-vie.html#action=watch&offset=406">VOD #action=watch&offset=406</a><br> 
