--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
         <h3><p><b> <mark>HZN</mark></b><br>
           
           <b> <mark> Actionable URLs:
-            <url_for_listing/mediagroup/mediaitem>#action=<action>[&offset=<offset>] </mark></b><br>
+            url_for_listing/mediagroup/mediaitem #action=<action> &offset=offset </mark></b><br>
    
 <a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000477986/swiss-army-man-hd.html#action=watch-trailer">#action=watch-trailer</a><br>   
 <a href="https://www.upctv.ch/en/movies-and-series/vod-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000477986/swiss-army-man-hd.html#action=watch-trailer&offset=45">#action=watch-trailer+offset</a><br>
