--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.upctv.ch/en/tv/channel-asset.html/642229287311/location/21656615443.html#action=watch">LIVE #action=watch2</a><br>
 <a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AAE2/plus-belle-la-vie/crid%3A~~2F~~2Fbds.tv~~2F302904846-imi%3A00100000016DF967/plus-belle-la-vie.html#action=watch&offset=406">VOD #action=watch&offset=406</a><br> 
 <a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AAE2/plus-belle-la-vie/crid%3A~~2F~~2Fbds.tv~~2F302904846-imi%3A00100000016DF967/plus-belle-la-vie.html#action=watch">VOD #action=watch</a><br>               
-<a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AB06/le-magazine-de-la-sante/crid%3A~~2F~~2Fbds.tv~~2F774199178-imi%3A00100000016F3113/le-magazine-de-la-sante.html#action=watch&offset=1733">TV Replay #action=watch&offset=1733</a><br>              
+<a href="https://www.upctv.ch/en/tv/channel-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000AB06/le-magazine-de-la-sante/crid%3A~~2F~~2Fbds.tv~~2F774199178-imi%3A00100000016F3113/le-magazine-de-la-sante.html#action=watch&offset=1733">TV Replay #action=watch&offset=1733</a><br>
+<a href="https://www.upctv.ch/dl/obo_ch/watchtv/station/lgi-ch-prod-master:1271/program/crid:%7E%7E2F%7E%7E2Fbds.tv%7E%7E2F14629707/listing/crid:%7E%7E2F%7E%7E2Fbds.tv%7E%7E2F1919943-imi:774102171/location/100#action=record">TV #action=record</a><br>
 
 
 
