--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ Wrong pages<br>
   <b>a - [T-Mobile] Web deeplinks https://www.magentatv.at</b><br>
                             
                         
-<p><a href="https://www.magentatv.at"> (title: Home)</a><br>
+<p><a href="https://www.magentatv.at/home"> (title: Home)</a><br>
 <a href="https://www.magentatv.at/de_at/watch-tv.html"> Now on TV)</a><br>
 <a href="https://www.magentatv.at/de_at/tv-guide.html"> TV Guide)</a><br>
 <a href="https://www.magentatv.at/de_at/on-demand.html"> On Demand)</a><br>
