--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ Wrong pages<br>
 
      <b>"Confirm"/"Redirect" links - https://www.magentatv.at/dl/de_at/...</b><br>
                        
-<p><a href="https://www.magentatv.at/dl/de_at/"> (title: Home)</a><br>
+<p><a href="https://www.magentatv.at/dl/de_at/home"> (title: Home)</a><br>
 <a href="https://www.magentatv.at/dl/de_at/watchtv"> Now on TV)</a><br>
 <a href="https://www.magentatv.at/dl/de_at/tvguide"> TV Guide)</a><br>
 <a href="https://www.magentatv.at/dl/de_at/ondemand"> On Demand) This page includes landing view, filter per categories (kids, movies, series etc…), filter per genres, filter per providers<a href="https://preprod-virgintvgo.virginmedia.com/dl/gb/myprime"> http://www.virgintvgo.virginmedia.com/dl/gb/ (title: myprime)</a><br>
