--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
         a - Web deeplinks https://www.horizon.tv/nl_nl.html;><br>
     b - "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br></p> 
 
-  <b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. NL</b><br>
+  <h5><b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. NL</b><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/tv-gids.html">tv-gids NL -> should be opened in Ziggo</a><br>
@@ -144,9 +144,9 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347686/spotlight.html/watch-trailer#0">https://www.horizon.tv/nl_nl/ trailer4 from the beginning -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347686/spotlight.html/watch-trailer#49">https://www.horizon.tv/nl_nl/ trailer4 with offset -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347707/pride-and-prejudice-and-zombies.html/watch-trailer#0">https://www.horizon.tv/nl_nl/ trailer5 from the beginning -> should be opened in Ziggo</a><br>
-<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347707/pride-and-prejudice-and-zombies.html/watch-trailer#69">https://www.horizon.tv/nl_nl/ trailer5 with offset -> should be opened in Ziggo</a><br></p>
+<a href="https://www.horizon.tv/nl_nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000347707/pride-and-prejudice-and-zombies.html/watch-trailer#69">https://www.horizon.tv/nl_nl/ trailer5 with offset -> should be opened in Ziggo</a><br></p></h5>
 
-      <b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. Different countries.</b><br>
+      <h5><b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. Different countries.</b><br>
      
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries<br>
 
@@ -178,15 +178,15 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/de_de/maxdome.html">https://www.horizon.tv/de_de/maxdome DE -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_de/myprime.html">https://www.horizon.tv/de_de/myprime DE -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/de_de/maxdome/movie-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000213178/collateral.html">https://www.horizon.tv/de_de/ Maxdome item-2 DE -> should be opened in HZN</a><br>
-<a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead -> should be opened in HZN</a></p> 
+<a href="https://www.horizon.tv/de_de/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead/crid%3A~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000262519/survival-of-the-dead.html">https://www.horizon.tv/de_de/ My prime DE/Survival of the Dead -> should be opened in HZN</a></p></h5>
 
-   <b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. ACTIONABLE URLs</b><br>
+  <h5><b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. ACTIONABLE URLs</b><br>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries<br>
 <a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/27909159395/location/21656615443/watch">Actionable URL for live assets</a><br>
-<a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0108-00000001FFC9/rts-kids/crid%3A~~2F~~2Fbds.tv~~2F656115161-imi%3A0010000000F5AB39/rts-kids/watch#274">Actionable URL for Replay assets</a><br>
+<a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0108-00000001FFC9/rts-kids/crid%3A~~2F~~2Fbds.tv~~2F656115161-imi%3A0010000000F5AB39/rts-kids/watch#274">Actionable URL for Replay assets</a><br></h5>
 
 
-    <b>b - [HZN] "Confirm"/"Redirect" link https://www.horizon.tv/dl/nl/...</b><br>
+    <h5><b>b - [HZN] "Confirm"/"Redirect" link https://www.horizon.tv/dl/nl/...</b><br>
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379026">https://www.horizon.tv/dl/nl/ My prime item -> should be opened in Ziggo</a><br>
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ My prime item-w/o episode -> should be opened in Ziggo</a><br> 
 <a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl// My prime item-w/o episode-w/o season -> should be opened in Ziggo</a><br>   
@@ -220,7 +220,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d/season/crid:~~2F~~2Fupc.com~~2F82eaf379-d47f-4cd5-945c-b00258ba592c">https://www.horizon.tv/dl/ch/ My prime item SHOW -epis -> should be opened in HZN</a><br>
 <a href="https://www.horizon.tv/dl/ch/myprime/show/crid:~~2F~~2Fupc.com~~2F5a71c353-c6a0-4b81-bc35-78f9c749b42d">https://www.horizon.tv/dl/ch/ My prime item SHOW -epis -seas -> should be opened in HZN</a><br>
 
-<a href="https://www.horizon.tv/dl/cz/watchtv/station/546676775251/program/crid:~~2F~~2Fbds.tv~~2F249283399/listing/crid:~~2F~~2Fbds.tv~~2F249283399-imi:0010000000CCB23A/location/667808295264">https://www.horizon.tv/dl/cz/ Replay item</a><br>
+<a href="https://www.horizon.tv/dl/cz/watchtv/station/546676775251/program/crid:~~2F~~2Fbds.tv~~2F249283399/listing/crid:~~2F~~2Fbds.tv~~2F249283399-imi:0010000000CCB23A/location/667808295264">https://www.horizon.tv/dl/cz/ Replay item</a><br></h5>
              
     <h5><p> <mark>2. HZN. Mobile deeplinks: hgo://nl/... </mark><br>
 Landing pages. NL<br>
