--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 <a href="https://www.horizon.tv/dl/ch/bestofweb/channel/6413519663908599607"> Shared=/dl link - Channel</a><br>
 <a href="https://www.horizon.tv/dl/ch/bestofweb/channel/6250071565897118662/video/6430921874901912302"> Shared=/dl link - Video asset</a><br>          
 <a href="upctv://ch/bestofweb/channel/6413519663908599607"> upctv:// Shared=/dl link - Channel</a><br>   
-<a href="upctv://ch/bestofweb/channel/6250071565897118662/video/6430921874901912302"> upctv:// Shared=/dl link - Video asset</a><br>
+<a href="upctv://ch/bestofweb/channel/6250071565897118662/video/6430921874901912302"> upctv:// Shared=/dl link - Video asset</a><br></h5>
         
         <h5><p><b> <mark>HZN</mark></b><br>
           
@@ -84,7 +84,7 @@ Indirectly Mobile deeplinks can be tested by p.1-a
 
          <h5><b> <mark>1. Universal links: </mark></b><br>
         a - Web deeplinks https://www.horizon.tv/nl_nl.html;><br>
-    b - "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br></p> 
+    b - "Confirm"/"Redirect" links - https://www.horizon.tv/dl/nl/...<br></p></h5> 
 
   <h5><b>a - [HZN] Web deeplinks https://www.horizon.tv/nl_nl.html. NL</b><br>
 <a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL -> should be opened in Ziggo</a><br>
