--- a/index.html
+++ b/index.html
@@ -504,15 +504,15 @@ b - "Confirm"/"Redirect" links -  https://www.magentatv.at/dl/de_at/...<br></p>
   <a href="tmobiletv://at_de/myvideos">Myvideos Page</a><br></p>  
           
   <b>TV ASSETS</b><br>                             
-  <a href="tmobiletv://at_de/watchtv/station/lgilabs-gb-vmlabd-master:4e1806e1d3ed339cf6f24a0670bef0648e7f7bc35067f50242d8313725487f48/program/crid://virginmedia.com/content/SH019577460000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FEP019577460038-imi:c64dbda1001f0f4bc832c5ad40616db4a95b926d34ebefd342619f33248b0d94/location/65535">VMUK TV asset live</a><br>                                   
-  <a href="tmobiletv://at_de/watchtv/station/lgilabs-gb-vmlabd-master:df97afd738d932394160dd60edb5a72a5aacec5876e7c2163734830a3f075e14/program/crid://virginmedia.com/content/SH012601130000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FEP012601130005-imi:ac8b2282c135d9276471de6e56bb1c65ae2192e9eacabc349a65ecfc9b75029a/location/65535">VMUK TV asset future</a><br></p></h5>                                   
+  <a href="tmobiletv://at_de/watchtv/station/lgilabs-gb-vmlabd-master:4e1806e1d3ed339cf6f24a0670bef0648e7f7bc35067f50242d8313725487f48/program/crid://virginmedia.com/content/SH019577460000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FEP019577460038-imi:c64dbda1001f0f4bc832c5ad40616db4a95b926d34ebefd342619f33248b0d94/location/65535">TV asset live</a><br>                                   
+  <a href="tmobiletv://at_de/watchtv/station/lgilabs-gb-vmlabd-master:df97afd738d932394160dd60edb5a72a5aacec5876e7c2163734830a3f075e14/program/crid://virginmedia.com/content/SH012601130000/listing/crid:~~2F~~2Fvirginmedia.com~~2Fcontent~~2FEP012601130005-imi:ac8b2282c135d9276471de6e56bb1c65ae2192e9eacabc349a65ecfc9b75029a/location/65535">TV asset future</a><br></p></h5>                                   
  
 <a><p><h5>Action links for Linear:<br>
 
-<a href="https://www.magentatv.at/de_at/live-channels/live-channel.html/554823207407/location/554823207312/1496062800000/watch">now AT</a><br>
-<a href="https://www.magentatv.at/de_at/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F14680823/two-and-a-half-men/crid%3A~~2F~~2Fbds.tv~~2F5864205-imi%3A00100000017596B9/ich-kann-ihren-skrupel-sehen/watch#349">replay AT</a><br>
-<a href="https://www.magentatv.at/de_at/live-channels/live-channel.html/554823207399/location/554823207312/1496079000000/record">record AT</a><br>
-<a href="tmobiletv://de_at/live-channels/live-channel.html/554823207407/location/554823207312/1496062800000/watch">now AT</a><br>                                                                      
+<a href="https://www.magentatv.at/de_at/live-channels/live-channel.html/554823207407/location/554823207312/1496062800000/watch">now</a><br>
+<a href="https://www.magentatv.at/de_at/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F14680823/two-and-a-half-men/crid%3A~~2F~~2Fbds.tv~~2F5864205-imi%3A00100000017596B9/ich-kann-ihren-skrupel-sehen/watch#349">replay</a><br>
+<a href="https://www.magentatv.at/de_at/live-channels/live-channel.html/554823207399/location/554823207312/1496079000000/record">record</a><br>
+<a href="tmobiletv://de_at/live-channels/live-channel.html/554823207407/location/554823207312/1496062800000/watch">now</a><br>                                                                      
 
                                                                                                                   
 <h5><p><b> <mark>UPC</mark></b><br>           
