--- a/index.html
+++ b/index.html
@@ -547,13 +547,13 @@ b - "Confirm"/"Redirect" links - https://www.upctv.ch/dl/obo_en<br></p>
 <a href="https://www.upctv.ch/dl/obo_en/settings/my-tv-channels.html"> My TV channels - personalized line-up</a><br>
 <a href="https://www.upctv.ch/dl/obo_en/settings/mediaboxes.html"> My Devices<br></p>  
                       
-<p><b> <mark>2. [UPC] Mobile Deeplinking tmobiletv://at_de/... </mark></b><br>
-  <a href="upctv://obo_e/home">Home Page</a><br>
-  <a href="upctv://obo_e/tvguide">TV-Guide Page</a><br>
-  <a href="upctv://obo_e/watchtv">WatchTV Page</a><br>
-  <a href="upctv://obo_e/myprime">Myprime Page</a><br>
-  <a href="upctv://obo_e/ondemand">Ondemand Page</a><br>
-  <a href="upctv://obo_e/myvideos">Myvideos Page</a><br></p>  
+<p><b> <mark>2. [UPC] Mobile Deeplinking upctv://obo_en/... </mark></b><br>
+  <a href="upctv://obo_en/home">Home Page</a><br>
+  <a href="upctv://obo_en/tvguide">TV-Guide Page</a><br>
+  <a href="upctv://obo_en/watchtv">WatchTV Page</a><br>
+  <a href="upctv://obo_en/myprime">Myprime Page</a><br>
+  <a href="upctv://obo_en/ondemand">Ondemand Page</a><br>
+  <a href="upctv://obo_en/myvideos">Myvideos Page</a><br></p>  
           
   <b>TV ASSETS</b><br>                             
   <a href="upctv://obo_en/tv/channel-asset.html/lgi-ch-prod-master%3A1271/location/100">TV asset</a><br>                                 
